Bug 1155022 - Removing the "NO CARRIER" from final response list. r=hsinyi